[package]
name = "spine_tiny"
version = "0.1.0"
authors = [ "Pierre Krieger <pierre.krieger1708@gmail.com>",
            "Johann Tuffe <tafia973@gmail.com>"]
description = "Simple implementation of the Spine runtime"
license = "Apache-2.0"
repository = "https://github.com/tomaka/spine-rs"

[lib]
name = "spine"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
log = "*"
